<resources>
    <string name="app_name">Source Code Viewer</string>
    <string name="info">enter website address</string>
    <string name="ic_list">last searches</string>
    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc cursus ornare egestas. Mauris ornare purus vitae tellus ullamcorper ullamcorper. Mauris luctus pharetra leo non sagittis. Curabitur sit amet luctus sapien. Donec dolor dui, suscipit porttitor auctor tristique, vehicula sed risus. Quisque mi magna, hendrerit sed condimentum mollis, molestie sit amet arcu. Donec tellus urna, viverra vitae lectus et, scelerisque tristique tellus. Curabitur eget risus tellus. Nunc accumsan ut risus in sodales. Donec sollicitudin nisl vel augue convallis placerat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.  Vivamus diam nisi, pulvinar nec elit ut, faucibus ullamcorper tellus. Fusce dapibus neque dui, sed viverra tortor porttitor vel. Donec molestie, libero id fringilla ornare, massa dui convallis ipsum, sit amet malesuada quam arcu ut diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean sit amet odio ex. In luctus massa porttitor justo accumsan rutrum. Suspendisse bibendum nunc et libero varius sodales. In hac habitasse platea dictumst. Sed elementum est ligula, in mattis tellus viverra et. Sed ultricies porttitor lorem, at tristique tellus cursus malesuada. Nulla gravida, augue at rutrum vehicula, dui augue viverra arcu, a volutpat orci risus vitae nisl. Donec non consectetur ligula.  Nullam sagittis quam in massa congue, aliquet aliquam lectus accumsan. Vestibulum mattis diam in arcu convallis tristique. Integer non massa dapibus, convallis lacus quis, euismod odio. Aenean sit amet orci in sapien sollicitudin tempor condimentum sit amet quam. Donec nunc justo, tristique condimentum bibendum vel, tristique non metus. Aenean vehicula purus ut sollicitudin sodales. Cras lobortis ligula vel ligula ornare, at mollis tellus vehicula. Donec faucibus ullamcorper consectetur. Donec sed accumsan massa, nec porttitor augue. Sed consectetur luctus aliquam. Nam bibendum bibendum mauris sodales vehicula. Aliquam erat volutpat.  Proin tempor porta fringilla. Duis sed lacus at orci egestas egestas quis dignissim magna. Suspendisse euismod aliquet mauris vitae tincidunt. Pellentesque ex sem, maximus sed ex eu, faucibus tincidunt purus. Vestibulum feugiat magna a aliquam tempor. Praesent luctus, mauris et interdum scelerisque, mi mi euismod augue, sit amet vulputate nulla risus vel dolor. Maecenas vitae imperdiet mi. Nullam vestibulum convallis imperdiet. Cras nec velit sit amet est rhoncus bibendum non sollicitudin nisi. Aenean tincidunt in magna nec rhoncus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi nisl risus, accumsan at consectetur eu, facilisis sit amet tortor. Vestibulum accumsan dapibus sapien et vulputate. Vestibulum non malesuada lectus.  Vivamus iaculis, tortor ac blandit luctus, neque sem tristique velit, eget maximus massa nunc at quam. Nunc sodales lectus a dictum molestie. Duis neque sapien, aliquam non sodales nec, rhoncus at ipsum. Suspendisse lacus ex, euismod et hendrerit in, condimentum at dui. Sed eu porta ex, ut dictum nunc. In non molestie nisl. Maecenas euismod placerat leo in lobortis. Vestibulum a fringilla felis. Sed laoreet orci id nunc rutrum tempus. In quis bibendum arcu. Sed non urna auctor, vehicula orci in, placerat lorem. Nam vel enim orci. Aliquam sed orci et metus posuere mattis quis a lectus. Nam a nisl consectetur, vestibulum urna non, mattis tellus.</string>
    <string name="ic_clear">clear results</string>
    <string name="not_url">Not a proper url!</string>
    <string name="ohno">OH NO! THERE IS NO INTERNET CONNECTION!</string>
    <string name="error">Oops.. something went wrong! \nThis website probably does not exist.</string>
    <string name="button">download</string>
    <string name="no_internet">No internet connection.</string>
</resources>
